--- a/feature_dashboard.html
+++ b/feature_dashboard.html
@@ -23,12 +23,12 @@
             });
             this._mask.show();
 
-            this.fetch_iterations(this.getContext().getTimeboxScope());
+            this.fetch_features(this.getContext().getTimeboxScope());
           },
 
           onTimeboxScopeChange: function(ts) {
             this._mask.show();
-            this.fetch_iterations(ts);
+            this.fetch_features(ts);
           },
 
           haltEarly: function(msg) {
@@ -40,27 +40,22 @@
             });
           },
 
-          // Fetch a list of the names of the iterations in this quarter.
-          fetch_iterations: function(ts) {
-            this._mask.msg = 'Fetching iterations...';
+          fetch_features: function(ts) {
+            this._mask.msg = 'Fetching features...';
             this._mask.show();
 
             this.start_date = ts.record.raw.ReleaseStartDate;
             this.end_date = ts.record.raw.ReleaseDate;
+            var release_name = ts.record.get('Name');
+            console.log('Release:', release_name);
 
-            var store = Ext.create('Rally.data.wsapi.Store', {
-              model: 'Iteration',
-              fetch: ['Name', 'StartDate'],
+            var store = Ext.create('Rally.data.wsapi.artifact.Store', {
+              models: ['PortfolioItem/Feature'],
+              fetch: ['Name', 'Release'],
               filters: [
                 {
-                  property: 'StartDate',
-                  operator: '>=',
-                  value: this.start_date
-                },
-                {
-                  property: 'StartDate',
-                  operator: '<',
-                  value: this.end_date
+                  property: 'Release.Name',
+                  value: release_name
                 }
               ]
             }, this);
@@ -68,54 +63,187 @@
               scope: this,
               callback: function(records, operation) {
                 if (operation.wasSuccessful()) {
-                  this.num_iterations = records.filter(function(r) {
-                    return r.get('StartDate').getTime() < Date.now();
-                  }).length;
-
-                  var iterations = records.map(function(r) {
-                    return r.get('Name');
-                  });
-
-                  if (iterations.length > 0) {
-                    this.fetch_features(iterations, []);
-                  } else {
-                    this.haltEarly('No iterations found.');
-                  }
+                  console.log('Number of features: ' + records.length);
+                  this.fetch_stories(records, []);
                 }
               }
             });
           },
 
-          fetch_features: function(iterations, features) {
-            this._mask.msg = 'Fetching features...';
+          fetch_stories: function(features, stories) {
+            this._mask.msg = 'Fetching stories...';
             this._mask.show();
 
-            var store = Ext.create('Rally.data.Store', {
-              model: 'PortfolioItem',
-              fetch: ['Name'],
+            var store = Ext.create('Rally.data.wsapi.artifact.Store', {
+              models: ['UserStory', 'Defect'],
+              fetch: ['ObjectID'],
               filters: [
                 {
-                  property: 'Iteration.Name',
-                  value: iterations[0]
+                  property: 'Feature.Name',
+                  value: features[0].get('Name')
                 }
               ]
             }, this);
             store.load({
               scope: this,
               callback: function(records, operation) {
-                iterations.shift();
-                if (iterations.length > 0) {
-                  this.fetch_features(iterations, 
-                    operation.wasSuccessful() ?
-                      features.concat(records) :
-                      features);
+                if (operation.wasSuccessful()) {
+                  stories = stories.concat(records.map(
+                    function(r) {
+                      return r.get('ObjectID');
+                    }
+                  ));
+                }
+                features.shift();
+
+                if (features.length > 0) {
+                  this.fetch_stories(features, stories);
                 } else {
-                  console.log(features.map(function(f) {
-                    return f.get('Name');
-                  }));
+                  console.log('Number of stories:', stories.length);
+                  this.fetch_histories(stories);
                 }
               }
             });
+          },
+
+          fetch_histories: function(stories) {
+            this._mask.msg = 'Fetching story histories...';
+            this._mask.show();
+
+            var deltas = {};
+            var now = new Date();
+            if (new Date(this.end_date) < now) {
+              now = new Date(this.end_date);
+            }
+            for (var d = new Date(this.start_date); d <= now; d.setDate(d.getDate() + 1)) {
+              deltas[d.toDateString()] = {
+                planned: 0,
+                released: 0
+              };
+            }
+            
+            var that = this;
+            var store = Ext.create('Rally.data.lookback.SnapshotStore', {
+              fetch: ['Name', 'FormattedID', 'ScheduleState', '_PreviousValues.ScheduleState', 'PlanEstimate', '_ValidFrom', 'CreationDate'],
+              hydrate: ['ScheduleState', '_PreviousValues.ScheduleState'],
+              filters: [
+                {
+                  property: 'ObjectID',
+                  operator: 'in',
+                  value: stories
+                }
+              ],
+              listeners: {
+                load: function(store, data, success) {
+                  if (success) {
+                    creation_dates = {};
+                    release_dates = {};
+                    estimates = {};
+                    data.filter(function(d) {
+                      return (
+                        (
+                          d.get('_PreviousValues.ScheduleState')
+                          && d.get('_PreviousValues.ScheduleState').length > 0
+                        )
+                        || d.get('_PreviousValues.ScheduleState') === null
+                      );
+                    }).forEach(function(d) {
+                      var fid = d.get('FormattedID');
+                      estimates[fid] = d.get('PlanEstimate');
+                      creation_dates[fid] = new Date(d.get('CreationDate')).toDateString();
+                      if (d.get('ScheduleState') == 'Released') {
+                        release_dates[fid] = new Date(d.get('_ValidFrom')).toDateString();
+                      } else {
+                        delete release_dates[fid];
+                      }
+                    });
+                    
+                    var fids = [];
+                    Object.keys(release_dates).concat(Object.keys(creation_dates)).forEach(function(fid) {
+                      if (fids.indexOf(fid) < 0) {
+                        fids.push(fid);
+                      }
+                    });
+
+                    fids.forEach(function(s) {
+                      var c_date = creation_dates[s];
+                      if (deltas[c_date]) {
+                        deltas[c_date].planned += estimates[s];
+                      } else {
+                        deltas[Object.keys(deltas)[0]].planned += estimates[s];
+                      }
+
+                      var r_date = release_dates[s];
+                      if (deltas[r_date]) {
+                        deltas[r_date].released += estimates[s];
+                      } else {
+                        console.log(r_date + ' ' + Object.keys(deltas)[0]);
+                      }
+                    });
+
+                    for (var i = 0; i < Object.keys(deltas).length - 1; i += 1) {
+                      var d_prev = Object.keys(deltas)[i];
+                      var d_next = Object.keys(deltas)[i + 1];
+                      deltas[d_next].planned += deltas[d_prev].planned;
+                      deltas[d_next].released += deltas[d_prev].released;
+                    }
+                    that.build_chart(deltas);
+                  }
+                }
+              }
+            });
+            store.load({ scope: this });
+          },
+
+          build_chart: function(deltas) {
+            this._mask.msg = 'Building chart...';
+            this._mask.show();
+
+            var planned_series = [];
+            var released_series = [];
+            var dates = [];
+            Object.keys(deltas).forEach(function(d) {
+              planned_series.push(deltas[d].planned);
+              released_series.push(deltas[d].released);
+              dates.push(d);
+            });
+
+            this.removeAll();
+            var chart = this.add({
+              xtype: 'rallychart',
+              loadMask: false,
+              chartData: {
+                series: [
+                  {
+                    name: 'Released',
+                    data: released_series
+                  },
+                  {
+                    name: 'Planned',
+                    data: planned_series
+                  }
+                ],
+                categories: dates
+              },
+              chartConfig: {
+                chart: { type: 'line' },
+                title: { text: 'Points released for features this quarter' },
+                xAxis: { 
+                  title: { enabled: false },
+                  tickInterval: 7
+                },
+                yAxis: { 
+                  title: { text: 'Total points' },
+                  min: 0
+                },
+                plotOptions: { line: {
+                  lineWidth: 3,
+                  marker: { enabled: false }
+                }}
+              }
+            });
+
+            this._mask.hide();
           }
         });
 
@@ -124,6 +252,6 @@
     </script>
   </head>
   <body>
-    <div>x</div>
+    <div>無</div>
   </body>
 </html>
